Homepage content alignent and basic style
Signed-off-by: Pavol Jr <palo.hlavac95@gmail.com>

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -2,6 +2,11 @@
  * Start Bootstrap - Clean Blog v4.0.0-beta.2 (https://startbootstrap.com/template-overviews/clean-blog)
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-clean-blog/blob/master/LICENSE)
+
+ Modified by PavolJr
+
+ -visit: pavol.ie
+
  */
 body {
   font-size: 20px;
